# jdsw

./: .gitignore  .gitmodules  LICENSE  README.md  grid_test.html  instructions.html  prodigy.json  project.yml  pyproject.toml  requirements.txt  run.py
assets/: annotations-small.jsonl  beida-KR1a0001.conllu  default_reading_profiles.csv  docs.csv  instructions.html  jdsw_ner_patterns.jsonl  juan.csv  meta_span_patterns.jsonl  ner-patterns.jsonl  ner_patterns.jsonl  normalization.json  patterns.jsonl  phon_span_patterns.jsonl  pos_sample.jsonl  ruzi.csv  sem_span_patterns.jsonl  span-labels.txt  span_patterns.jsonl  span_patterns_specific.jsonl  tharsen_wang_jdsw.tsv  variants.json  xintangshu_ner_patterns.jsonl
configs/: ner.cfg  spans.cfg
corpus/: lzh_kyoto-ud-dev.conll  lzh_kyoto-ud-dev.spacy  lzh_kyoto-ud-test.conll  lzh_kyoto-ud-test.spacy  lzh_kyoto-ud-train.spacy  tong_corpus.txt  zhuangzi.conllu
data/: GDR-SBGY-full.csv  GDR-SBGY-full.tsv  GDR_SBGY_full.tsv  dev.spacy  docs.csv  juan.csv  kr-unicode.csv  spans.jsonl  test.spacy  train.spacy  variants.json
docs/: corpus.md  dependencies.md  phon_flowchart.md  pipeline.md
lib/: alignment.py  documents.py  loaders.py  patterns.py  phonology.py  style.css  transforms.py  util.py  visualizers.py
notebooks/: annotations.csv  annotations.ipynb  corpus_curation.ipynb  ent_detect.ipynb  ruzi.ipynb
scripts/: recipes.py  visualize.py  visualize_ner.py  visualize_spans.py
src/: src_overview.tsv
src2/: preprocessing.py  src_overview.tsv
test/: test_alignment.py  test_phonology.py  test_transforms.py  (+2 more)
(+1565 files in other folders)
