[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jdsw"
version = "0.1.0"
description = "Parsing the Jingdian Shiwen into structured annotation data"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    # pinned to the verified development environment
    "spacy==3.8.14",
    "srsly==2.5.3",
    "typer==0.20.0",
    "jsonlines==4.0.0",
    "torch==2.10.0",
    "pandas==2.2.2",
    # bounded only; not pinned against a verified environment
    "seaborn>=0.13,<0.14",
    "nltk>=3.9,<4.0",
    "spacy-och>=0.1.0",
    "spacy-transformers>=1.3,<2.0",
    "spacy-experimental>=0.6,<0.7",
    "suparkanbun>=1.0",
    "fastcore>=1.5,<2.0",
    "pyconll>=3.1,<4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["scripts*"]
exclude = ["scripts.test*"]

[tool.pytest.ini_options]
testpaths = ["scripts/test"]
